force-app/main/default/objects/Contract_Term_History__c/Contract_Term_History__c.object-meta.xml
<CustomObject>
    <label>合同条款历史</label>
    <nameField>
        <displayFormat>PTH-{00000}</displayFormat>
        <label>Terms No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>