force-app/main/default/objects/Contract_Term_History__c/fields/Account_Period__c.field-meta.xml
<CustomField>
    <fullName>Account_Period__c</fullName>
    <label>Account Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>