force-app/main/default/objects/Contract_Term_History__c/fields/Account_Period_Starting_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Period_Starting_Date__c</fullName>
    <label>Account Period Starting Date</label>
    <type>Date</type>
</CustomField>