force-app/main/default/objects/Contract_Term_History__c/fields/Amercement_Condition__c.field-meta.xml
<CustomField>
    <fullName>Amercement_Condition__c</fullName>
    <label>Amercement Condition</label>
    <type>TextArea</type>
</CustomField>