force-app/main/default/objects/Contract_Term_History__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Payment_Term_History</relationshipName>
    <type>Lookup</type>
</CustomField>