force-app/main/default/objects/Contract_Term_History__c/fields/Rebate_Condition__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Condition__c</fullName>
    <label>Rebate Condition</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>