force-app/main/default/objects/Contract_Term_History__c/fields/Service_Retirement_Terms__c.field-meta.xml
<CustomField>
    <fullName>Service_Retirement_Terms__c</fullName>
    <label>Service Retirement Terms</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>